# ComfyUI-KyutaiTTS

./: CITATION.cff  NOTICE  README.md  nodes.py  pyproject.toml
example_workflows/: KyutaiTTS.json
moshi_src/moshi/: __init__.py
moshi_src/moshi/conditioners/: __init__.py  base.py  tensors.py  text.py
moshi_src/moshi/models/: compression.py  lm.py  lm_utils.py  loaders.py  tts.py
moshi_src/moshi/modules/: conv.py  conv_test.py  gating.py  lora.py  resample.py  rope.py  seanet.py  seanet_test.py  streaming.py  transformer.py
moshi_src/moshi/quantization/: core_vq.py  vq.py
moshi_src/moshi/utils/: compile.py  quantize.py  sampling.py  utils.py
